ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: document-expert-ingress
  namespace: document-expert
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:028892270743:certificate/c225a9ae-24e6-4a4e-80c1-b84b6d4dfe29
    alb.ingress.kubernetes.io/actions.ssl-redirect: >
      {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301" }}
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          # Redirect all HTTP to HTTPS
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /openapi.json
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
